yaml-files/deployment_sql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data-pvc
          mountPath: /var/lib/mysql
      volumes:
      - name: data-pvc
        persistentVolumeClaim: 
          claimName: mysql-pvc
