yaml-files/service_microserivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
