yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress

    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1/data/
        pathType: Prefix
        backend:
          service:
            name: data-service
            port:
              number: 8080
